Extract UL to Unsupported map transf. to own class
This extracts the unsigned_long replacement with UnsupportedEsField into
own class, `IndexCompatibility`, in case backwards compatibility needs
to apply. This leaves the responsability to ensure BWC to
IndexResolver's callers.